--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "boostrap": "^2.0.0",
     "bootstrap": "4.2.1",
+    "material-ui": "^0.20.2",
     "mdbreact": "^4.10.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
